@@ -182,6 +182,9 @@ Library
 - Issue #16511: Use default IDLE width and height if config param is not valid.
   Patch Serhiy Storchaka.
 
+- Issue #16713: Parsing of 'tel' urls using urlparse separates params from
+  path.
+
 - Issue #16443: Add docstrings to regular expression match objects.
   Patch by Anton Kasyanov.
 
